* Hoard mode no longer borrows the Proximity Bomb slot for counting player orbs; Proximity Bomb powerups can now be found and used correctly in Hoard mode.
* Fixed some Multiplayer scoring oddities.
* Fixed original game bug that prevented markers from spinning.  Markers were given a spin rate, but their type did not use that field, so they did not spin.  Markers now spin, and their spin varies based on an internal identifier, so different markers will spin in different directions and orientations.
* Fixed original game bug that could cause a test for a trigger to produce the wrong result.
* New SP (Options->Gameplay) / MP (Host Game -> Game Setup -> Advanced) options to remove the thief during level load and to restore the thief energy weapon bug.
* Command line option `-tmap` was specific to SDL-only builds and had no effect in OpenGL-enabled builds.  It is no longer accepted by OpenGL builds.
* Added experimental support for libADLMIDI [contributed by jpcima].
  - Users must separately install a compatible libADLMIDI library on the library search path.
* ... and many, many more bugfixes and improvements.
* Fixed original bug that buddy was limited to 5 hints per program run, not 5 per boss as it probably should have been.
  - Due to savegame format limitations, this still is not right.  Reloading the game should restore Buddy_gave_hint_count to its value at save time, but will not.

Known issues
------------
* On Windows the mouse is not correctly released if using ALT+TAB to minimize the game. This is not a bug in the program but rather the SDL library. It can be worked around by pausing the game and using ALT+ENTER to get the game to windowed mode. The mouse should not be stuck then anymore.
* Mac builds may suffer from crashes (or other random glitches) when playing MIDI music. This is not a bug in the program but rather an issue in timidity which SDL_mixer uses to play these files. Using a Soundtrack AddOn (which contains OGG files) should fix that problem.